<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">MyHabitTracker</string>

    <string name="name">Name:</string>

    <string name="Que2">Have you been to the gym today?</string>

    <string name="Que3">Which fruit did you eat today?</string>

    <string name="Que4">Glasses of water drunk today?</string>

    <string name="Que5">Amount of calories consumed today?</string>

    <!-- Label for dropdown menu option if the person go to gym  [CHAR LIMIT=20] -->
    <string name="option_yes">Yes</string>

    <!-- Label for dropdown menu option if the person doesn't go to gym [CHAR LIMIT=20] -->
    <string name="option_no">No</string>

    <!-- Label for overflow menu option that inserts fake person data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all person data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_data">Delete All data</string>

    <!-- Label for editor menu option to save data and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor overflow menu option that deletes the current data [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>
</resources>
